// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider renders 1`] = `
<div>
  <div
    class="my-[6px] mx-0"
  >
    <div
      class="block cursor-pointer w-full relative py-[6px] -my"
      data-orientation="horizontal"
      id="base-ui-:r0:"
      role="group"
    >
      <div
        class="block w-full relative h-[1px] mb-[-1px]"
        data-orientation="horizontal"
      >
        <div
          class="block w-full h-[1px] rounded-none bg-gray"
          data-orientation="horizontal"
          style="position: relative;"
        >
          <div
            class="block h-[1px] bg-blue"
            data-orientation="horizontal"
            style="position: relative; height: inherit; inset-inline-start: 0; width: 0%;"
          />
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="0"
            class="group/thumb flex justify-center items-center w-[15px] h-[15px] rounded-[50%] bg-blue border-[2px] border-solid border-white outline-0 absolute transition-shadow cursor-pointer ml-[-6px]"
            data-index="0"
            data-orientation="horizontal"
            id="base-ui-:r1:"
            style="position: absolute; inset-inline-start: 0%; top: -7px;"
          >
            <span
              class="absolute will-change transition-transform hidden bottom-[calc(100%+2px)] left-[calc(100%-13px)]"
            >
              <span
                class="shadow-4 text-sm text-white bg-graphite m-1 rounded-sm py-[2px] px-2 max-w break-words"
              >
                0
              </span>
            </span>
            <input
              aria-orientation="horizontal"
              aria-valuenow="0"
              id="base-ui-:r3:"
              max="100"
              min="0"
              step="1"
              style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: absolute; top: 0px; left: 0px;"
              type="range"
              value="0"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider with initial value 1`] = `
<div>
  <div
    class="my-[6px] mx-0"
  >
    <div
      class="block cursor-pointer w-full relative py-[6px] -my"
      data-orientation="horizontal"
      id="base-ui-:r8:"
      role="group"
    >
      <div
        class="block w-full relative h-[1px] mb-[-1px]"
        data-orientation="horizontal"
      >
        <div
          class="block w-full h-[1px] rounded-none bg-gray"
          data-orientation="horizontal"
          style="position: relative;"
        >
          <div
            class="block h-[1px] bg-blue"
            data-orientation="horizontal"
            style="position: relative; height: inherit; inset-inline-start: 0; width: 4%;"
          />
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="4"
            class="group/thumb flex justify-center items-center w-[15px] h-[15px] rounded-[50%] bg-blue border-[2px] border-solid border-white outline-0 absolute transition-shadow cursor-pointer ml-[-6px]"
            data-index="0"
            data-orientation="horizontal"
            id="base-ui-:r9:"
            style="position: absolute; inset-inline-start: 4%; top: -7px;"
          >
            <span
              class="absolute will-change transition-transform hidden bottom-[calc(100%+2px)] left-[calc(100%-13px)]"
            >
              <span
                class="shadow-4 text-sm text-white bg-graphite m-1 rounded-sm py-[2px] px-2 max-w break-words"
              >
                4
              </span>
            </span>
            <input
              aria-orientation="horizontal"
              aria-valuenow="4"
              id="base-ui-:rb:"
              max="100"
              min="0"
              step="1"
              style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: absolute; top: 0px; left: 0px;"
              type="range"
              value="4"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
